lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/fdlog_files_flush/fdlog_files_flush3/fdlog_files_flush3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/fdlog_files_flush/fdlog_files_flush3/fdlog_files_flush3.c:27:23: error: use of undeclared identifier 's__errh'; did you mean 'stderr'?
    fdlog_files_flush(s__errh ,q_b__memrel );
                      ^~~~~~~
                      stderr
/usr/include/stdio.h:145:14: note: 'stderr' declared here
extern FILE *stderr;            /* Standard error output stream.  */
             ^
1 error generated.
